# ember

./: .coverage  .gitignore  .pdm-python  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  ENVIRONMENT_MANAGEMENT.md  INSTALLATION_GUIDE.md  LICENSE  MODEL_DISCOVERY_FIXES.md  QUICKSTART.md  README.md  SIMPLIFIED_IMPORTS.md  TESTING_INSTALLATION.md  check_imports.py  config.yaml  config.yaml.example  conftest.py  datasets_example.ipynb  debug_discovery.py  ember  fix_imports.py  fix_newlines.py  fix_python_path.py  fix_unused_imports.py  minimal_test.py  model_invocation_example.ipynb  model_registry_test_plan.md  modified_test_non.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.sh  run_comprehensive_tests.sh  run_tests.sh  setup.py  setup_imports.py  (+11 more)
.github/workflows/: test-examples.yml  test.yml  tests.yml  update-pricing.yml
avior/: CONTRIBUTING.md  README.md  datasets_example.ipynb  model_invocation_example.ipynb  pyproject.toml  requirements.txt  restructure.sh  usage_example.py
avior/src/avior/core/: graph_executor.py  operator_graph.py  operator_graph_builder.py  operator_graph_runner.py  scheduler.py  simple_flow.py  trace_context.py  tracer.py  tracer_decorator.py
avior/src/avior/core/configs/: config.py
avior/src/avior/domain/: models.py
avior/src/avior/examples/: custom_model_experiment.py  custom_prompt_example_caravan.py  custom_prompt_experiment.py  diverse_ensemble_operator_example.py  example_architectures.py  jit_example.py  mcq_experiment_example.py  nested_non_experiment_examples.py  non_package_graph_example.py  watsonx_model_experiment.py
avior/src/avior/modules/: lm_modules.py
avior/src/avior/registry/: non.py
avior/src/avior/registry/dataset/base/: config.py  loaders.py  models.py  preppers.py  samplers.py  transformers.py  validators.py
avior/src/avior/registry/dataset/datasets/: code_prepper.py  commonsense_qa.py  halueval.py  mmlu.py  short_answer.py  truthful_qa.py  usage_example.py
avior/src/avior/registry/dataset/registry/: initialization.py  loader_factory.py  metadata_registry.py  service.py
avior/src/avior/registry/eval_function/: evaluators.py
avior/src/avior/registry/model/: README.md  config.py  config.yaml
avior/src/avior/registry/model/examples/: example.py
avior/src/avior/registry/model/provider_registry/: base.py
avior/src/avior/registry/model/provider_registry/anthropic/: anthropic_config.yaml  anthropic_provider.py
avior/src/avior/registry/model/provider_registry/deepmind/: gemini_provider.py
avior/src/avior/registry/model/provider_registry/ibm/: watsonx_provider.py
avior/src/avior/registry/model/provider_registry/openai/: openai_config.yaml  openai_provider.py
avior/src/avior/registry/model/registry/: __init__.py  factory.py  model_enum.py  model_registry.py
avior/src/avior/registry/model/schemas/: chat_schemas.py  cost.py  model_info.py  provider_info.py  usage.py
avior/src/avior/registry/model/services/: __init__.py  model_service.py  usage_service.py
avior/src/avior/registry/operator/: operator_base.py  operator_registry.py
avior/src/avior/registry/prompt_signature/: signatures.py
avior/src/avior/utils/: embedding_utils.py  retry_utils.py
avior/tests/: conftest.py
avior/tests/avior/: test_integration.py
avior/tests/avior/core/: test_graph_executor.py  test_non_graph.py  test_plan_and_scheduler.py
avior/tests/avior/modules/: test_lm_modules.py
avior/tests/avior/operators/: test_operator_base.py  test_operator_registry.py
avior/tests/avior/registry/: conftest.py  test_integration.py  test_model_factory.py  test_models.py  test_non.py  test_usage_tracker.py
avior/tests/avior/registry/dataset/: test_dataset_registry.py  test_extended_preppers.py
avior/tests/avior/registry/eval_function/: test_eval_function_registry.py
avior/tests/avior/registry/models/: test_model_registry.py  test_model_registry_extra.py
avior/tests/model/integration/: test_integration_end_to_end.py
avior/tests/model/provider_registry/: test_anthropic_provider.py  test_base.py  test_gemini_provider.py  test_openai_provider.py  test_watsonx_provider.py
avior/tests/model/registry/: test_factory.py  test_model_enum.py  test_model_registry.py
avior/tests/model/schemas/: test_cost.py  test_model_info.py  test_provider_info.py  test_usage.py
avior/tests/model/services/: test_model_service.py  test_usage_service.py
cleanup_backup/: README.md
coverage/: coverage.xml
docker-test/: Dockerfile  README.md  test_installation.sh
docs/: README.md  mkdocs.yml  responses_claude_gemini_parity.md
docs/cli/: CLI_STATUS.md  DEVELOPERS.md  README.md
docs/design/: enhanced_jit_design_doc.md  xcs_classification_v2_plan.md  xcs_operation_classification.md
docs/docs/: index.md
docs/quickstart/: configuration.md  data.md  model_registry.md  non.md  operators.md  prompt_signatures.md
docs/xcs/: API_REFERENCE.md  EXECUTION_OPTIONS.md  JIT_OVERVIEW.md  PERFORMANCE_GUIDE.md  README.md  (+3 more)
ember/: CONTRIBUTING.md  datasets_example.ipynb  model_invocation_example.ipynb  pyproject.toml  requirements.txt  restructure.sh
examples/: README.md  __init__.py  auto_graph_example.py  container_operator_example.py  custom_prompt_example_caravan.py  enhanced_jit_example.py  example_architectures.py  jit_example.py  mcq_experiment_example.py  model_registry_example.py  parallel_pipeline_example.py  simple_autograph_example.py  simple_jit_demo.py  transformation_example.py
integrations/: README.md  __init__.py
scripts/: migrate_exceptions.py  run_integration_tests.sh
tests/: README.md  conftest.py  debug_imports.py  fixtures.py  mocks.py  pytest.ini  run_test_suite.py  simple_import_test.py  test_aime_implementation.py  test_constants.py  test_doubles.py  test_fixtures.py  test_import.py  test_lazy_loading.py  test_local_alias.py  test_normalize_prediction.py  test_ollama_provider.py  test_ollama_streaming.py  test_resolve_ollama_default.py  test_simplified_imports.py  test_simplified_xcs_imports.py  test_sql_agent.py  test_test_doubles.py  test_xcs_basic.py
(+1135 files in other folders)
