[tool.poetry]
name = "avior"
version = "0.1.0"
description = "Compositional Networks of Networks (NoN) for AI Systems"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["AI", "Networks of Networks", "Machine Learning"]
packages = [{ include = "avior", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = ">=1.0.0,<2.2.0"
numpy = ">=1.21.0,<1.27.0"

aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
anthropic = "0.40.0"
attrs = "23.2.0"
cachetools = "5.4.0"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
contourpy = "1.2.1"
cycler = "0.12.1"
datasets = "2.20.0"
dill = "0.3.8"
distro = "1.9.0"
filelock = "3.15.1"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.5.0"
google-ai-generativelanguage = "^0.6.6"
google-api-core = "2.19.1"
google-api-python-client = "2.139.0"
google-auth = "2.32.0"
google-auth-httplib2 = "0.2.0"
google-generativeai = ">=0.8.3"
googleapis-common-protos = "1.63.2"
grpcio = "1.65.4"
grpcio-status = "1.62.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httpx = "0.27.0"
huggingface-hub = "0.26.5"
ibm-watsonx-ai = "1.1.25"
idna = "3.7"
iniconfig = "2.0.0"
jiter = "0.5.0"
joblib = "1.4.2"
kiwisolver = "1.4.5"
matplotlib = "3.9.1"
multidict = "6.0.5"
multiprocess = "0.70.16"
openai = "1.57.2"
packaging = "24.1"
pillow = "10.4.0"
pluggy = "1.5.0"
prettytable = "3.12.0"
proto-plus = "1.24.0"
protobuf = "4.25.4"
pyarrow = "16.1.0"
"pyarrow-hotfix" = "0.6"
pyasn1 = "0.6.0"
pyasn1_modules = "0.4.0"
pydantic = "2.7.4"
pydantic_core = "2.18.4"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
PyYAML = "6.0.1"

# Downgrade requests from 2.32.3 to 2.32.2 to satisfy ibm-cos-sdk-core requirements
requests = "2.32.2"

rsa = "4.9"
scikit-learn = "1.6.0"
scipy = "1.13.1"
six = "1.16.0"
sniffio = "1.3.1"
setuptools = "75.2.0"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
tqdm = "4.67.1"
typing_extensions = "4.12.2"
tzdata = "2024.1"
uritemplate = "4.1.1"

# Downgrade urllib3 from 2.2.1 to a version <2.2, for example 1.26.19
urllib3 = "1.26.19"

wcwidth = "0.2.13"
xxhash = "3.4.1"
yarl = "1.9.4"
pydantic-settings = "2.3.0"

[tool.poetry.extras]
dev = ["pytest", "parameterized"]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
parameterized = "0.9.0"
jupyterlab = "4.0.6"
ipykernel = "6.26.0"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
markers = [
    "integration: Mark test as an integration test."
]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."avior.dataset_preppers"]
"truthful_qa" = "avior.registry.dataset.datasets.truthful_qa:TruthfulQAPrepper"
"short_answer" = "avior.registry.dataset.datasets.short_answer:ShortAnswerPrepper"
"commonsense_qa" = "avior.registry.dataset.datasets.commonsense_qa:CommonsenseQAPrepper"
"halueval" = "avior.registry.dataset.datasets.halueval:HaluEvalPrepper"
"mmlu" = "avior.registry.dataset.datasets.mmlu:MMLUPrepper"